# FQDN-WFP-Filtering

./: .gitignore  API.md  BUILD.md  CHECKLIST.md  CMakeLists.txt  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  download_dependencies.ps1
config/: config.json
data/: README.md
lib/: .gitkeep
logs/: README.md
src/: AuditLogger.cpp  AuditLogger.h  Config.cpp  Config.h  FirewallManager.cpp  FirewallManager.h  Resolver.cpp  Resolver.h  Scheduler.cpp  Scheduler.h  main.cpp
